--- a/AtividadeAV1/AtividadeAV1.csproj
+++ b/AtividadeAV1/AtividadeAV1.csproj
@@ -6,4 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AspNet.ScriptManager.bootstrap" Version="4.6.0" />
+    <PackageReference Include="AspNet.ScriptManager.jQuery" Version="3.6.0" />
+    <PackageReference Include="bootstrap" Version="5.2.2" />
+    <PackageReference Include="jQuery" Version="3.6.1" />
+  </ItemGroup>
+
 </Project>
